--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -62,6 +62,6 @@
 
 @media (max-width: 640px) {
   .wrapper {
-    max-width: 140px;
+    display: none;
   }
 }
